# SMGP

./: .gitignore  README.md
assignment1/: CMakeLists.txt  README.md
assignment1/src/: main.cpp  viewer_proxy.cpp  viewer_proxy.h
assignment2/: CMakeLists.txt  README.md
assignment2/data/: mesh.off
assignment2/src/: main_starter.cpp  uniform_grid.h  viewer_proxy.cpp  viewer_proxy.h
assignment3/: CMakeLists.txt  README.md
assignment3/src/: main_starter.cpp  viewer_proxy.cpp  viewer_proxy.h
assignment4/: CMakeLists.txt  README.md
assignment4/src/: main_starter.cpp  viewer_proxy.cpp  viewer_proxy.h
assignment4/src/viewer/: viewer_proxy.cpp
assignment5/: README.md
assignment5/src/: Deformation.cpp  Deformation.h  main.cpp
assignment6/: README.md
assignment6/data/cylinder/: handles.dmat  pose_target.dmat
assignment6/data/hand/: pose_target.dmat
assignment6/src/: main.cpp
